<resources>
    <string name="app_name">Моё первое андроид приложение</string>
    <string name="first_app_text">Домашка №1</string>
    <string name="change_color_button">Сменить цвет кнопки</string>\
    <string name="button_text">Нажми на меня</string>
    <string name="edited_text">Замени меня!</string>
    <string name="accept_text">Принять условия пользовательского соглашения</string>
    <!-- hints -->
    <string name="edit_text">Введите текст</string>
    <string name="toggle_on">Включено</string>
    <string name="toggle_off">Выключено</string>
    <string name="hint_text">text</string>
    <string name="hint_name">Имя</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_numbers">Только числа</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_email">Эл. почта</string>
    <string name="layout2_header">Набор полей ввода</string>
</resources>