<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/first_app_text"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <Switch
                android:id="@+id/switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/change_color_button"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="#0000FF"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/edited_text" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text"/>

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="#0000FF"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_text"
                android:textColor="@color/white"
                android:background="@color/purple_500" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="#0000FF" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOn="@string/toggle_on"
                android:textOff="@string/toggle_off" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="#0000FF" >
            </LinearLayout>


            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:selectedWeekBackgroundColor="#ff0000"
                android:weekNumberColor="#0000ff"
                android:maxDate="01/01/2100"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>